--- a/LoggerMS/src/main/resources/application.properties
+++ b/LoggerMS/src/main/resources/application.properties
@@ -1,4 +1,20 @@
-spring.application.name=LoggerMS
+server.port=8090
 
-spring.data.mongodb.uri=mongodb://localhost:27017/loggerdb
-server.port=8084
+# MongoDB Configuration
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=alerthub
+spring.data.mongodb.authentication-database=admin
+# If you have authentication enabled, uncomment and set these:
+# spring.data.mongodb.username=your_username
+# spring.data.mongodb.password=your_password
+
+# Swagger Configuration
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+springfox.documentation.swagger-ui.enabled=true
+
+# Logging Configuration
+logging.level.root=INFO
+logging.level.com.alerthub=DEBUG
+logging.level.org.springframework.data.mongodb=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
