--- a/ActionMS/deployment/mysql-service.yaml
+++ b/ActionMS/deployment/mysql-service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: actiondb
+  name: action-db
   labels:
-    app: actiondb
+    app: action-db
 spec:
   selector:
-    app: actiondb
+    app: action-db
   ports:
     - protocol: TCP
       port: 3306
-      targetPort: 3307
+      targetPort: 3306
   selector:
-    app: actiondb
+    app: action-db
   clusterIP: None
